<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/titleET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="true"
                    android:background="@null"
                    android:hint="@string/enter_title"
                    android:inputType="textCapSentences"
                    android:maxHeight="20dp"
                    android:minHeight="20dp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/descET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/enter_description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxHeight="100dp"
                    android:minHeight="100dp"
                    android:padding="10dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_gradient_button"
            android:enabled="false"
            android:text="@string/add"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>